build/log/idf_py_stdout_output_8932
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\sular\OneDrive\Documents\Arduino\ESP32MoistureSensor\VariousStuff\build\bootloader\esp-idf\esptool_py && C:\Users\sular\.espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Users/sular/esp/v5.3/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/build/bootloader/bootloader.bin"
Bootloader binary size 0x5180 bytes. 0x2e80 bytes (36%) free.
[2/7] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
ccache C:\Users\sular\.espressif\tools\riscv32-esp-elf\esp-13.2.0_20240530\riscv32-esp-elf\bin\riscv32-esp-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/build/config -IC:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/main -IC:/Users/sular/esp/v5.3/esp-idf/components/newlib/platform_include -IC:/Users/sular/esp/v5.3/esp-idf/components/freertos/config/include -IC:/Users/sular/esp/v5.3/esp-idf/components/freertos/config/include/freertos -IC:/Users/sular/esp/v5.3/esp-idf/components/freertos/config/riscv/include -IC:/Users/sular/esp/v5.3/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/sular/esp/v5.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/sular/esp/v5.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Users/sular/esp/v5.3/esp-idf/components/freertos/esp_additions/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_hw_support/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_hw_support/include/soc -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_hw_support/include/soc/esp32c3 -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_hw_support/dma/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_hw_support/port/esp32c3/. -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_hw_support/port/esp32c3/include -IC:/Users/sular/esp/v5.3/esp-idf/components/heap/include -IC:/Users/sular/esp/v5.3/esp-idf/components/log/include -IC:/Users/sular/esp/v5.3/esp-idf/components/soc/include -IC:/Users/sular/esp/v5.3/esp-idf/components/soc/esp32c3 -IC:/Users/sular/esp/v5.3/esp-idf/components/soc/esp32c3/include -IC:/Users/sular/esp/v5.3/esp-idf/components/hal/platform_port/include -IC:/Users/sular/esp/v5.3/esp-idf/components/hal/esp32c3/include -IC:/Users/sular/esp/v5.3/esp-idf/components/hal/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_rom/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_rom/include/esp32c3 -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_rom/esp32c3 -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_common/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_system/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_system/port/soc -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_system/port/include/riscv -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_system/port/include/private -IC:/Users/sular/esp/v5.3/esp-idf/components/riscv/include -IC:/Users/sular/esp/v5.3/esp-idf/components/lwip/include -IC:/Users/sular/esp/v5.3/esp-idf/components/lwip/include/apps -IC:/Users/sular/esp/v5.3/esp-idf/components/lwip/include/apps/sntp -IC:/Users/sular/esp/v5.3/esp-idf/components/lwip/lwip/src/include -IC:/Users/sular/esp/v5.3/esp-idf/components/lwip/port/include -IC:/Users/sular/esp/v5.3/esp-idf/components/lwip/port/freertos/include -IC:/Users/sular/esp/v5.3/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/sular/esp/v5.3/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/sular/esp/v5.3/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_wifi/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_wifi/wifi_apps/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_wifi/include/local -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_event/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_phy/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_phy/esp32c3/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_netif/include -IC:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/components/u8g2/csrc -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_adc/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_adc/interface -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_adc/esp32c3/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_adc/deprecated/include -IC:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/components/esp_littlefs/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_partition/include -IC:/Users/sular/esp/v5.3/esp-idf/components/nvs_flash/include -IC:/Users/sular/esp/v5.3/esp-idf/components/spi_flash/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_tsens/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_gpio/include -IC:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/CommonLibrary-C3 -IC:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/CommonLibrary-C3/lora -IC:/Users/sular/esp/v5.3/esp-idf/components/driver/deprecated -IC:/Users/sular/esp/v5.3/esp-idf/components/driver/i2c/include -IC:/Users/sular/esp/v5.3/esp-idf/components/driver/touch_sensor/include -IC:/Users/sular/esp/v5.3/esp-idf/components/driver/twai/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_pm/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_ringbuf/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_pcnt/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_gptimer/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_spi/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_i2s/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/sular/esp/v5.3/esp-idf/components/sdmmc/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_sdspi/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_sdio/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_dac/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_rmt/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_sdm/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_i2c/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_uart/include -IC:/Users/sular/esp/v5.3/esp-idf/components/vfs/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_ledc/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_parlio/include -IC:/Users/sular/esp/v5.3/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/Users/sular/esp/v5.3/esp-idf/components/mbedtls/port/include -IC:/Users/sular/esp/v5.3/esp-idf/components/mbedtls/mbedtls/include -IC:/Users/sular/esp/v5.3/esp-idf/components/mbedtls/mbedtls/library -IC:/Users/sular/esp/v5.3/esp-idf/components/mbedtls/esp_crt_bundle/include -IC:/Users/sular/esp/v5.3/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -IC:/Users/sular/esp/v5.3/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -IC:/Users/sular/esp/v5.3/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff=. -fmacro-prefix-map=C:/Users/sular/esp/v5.3/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c C:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/main/main.cpp
C:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/main/main.cpp:132:6: error: redefinition of 'void parse_gga(char*)'
  132 | void parse_gga(char *gga_str) {
      |      ^~~~~~~~~
C:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/main/main.cpp:48:6: note: 'void parse_gga(char*)' previously defined here
   48 | void parse_gga(char *gga_str) {
      |      ^~~~~~~~~
C:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/main/main.cpp:199:6: error: redefinition of 'void process_gps_data(char*, int)'
  199 | void process_gps_data(char *buffer, int len) {
      |      ^~~~~~~~~~~~~~~~
C:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/main/main.cpp:115:6: note: 'void process_gps_data(char*, int)' previously defined here
  115 | void process_gps_data(char *buffer, int len) {
      |      ^~~~~~~~~~~~~~~~
C:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/main/main.cpp: In function 'void display_lora_task(void*)':
C:/Users/sular/OneDrive/Documents/Arduino/ESP32MoistureSensor/VariousStuff/main/main.cpp:301:16: warning: unused variable 'i' [-Wunused-variable]
  301 |     static int i=0;
      |                ^
ninja: build stopped: subcommand failed.
